force-app/main/default/objects/Email_Reply__c/Email_Reply__c.object-meta.xml
<CustomObject>
    <label>Email Reply</label>
    <nameField>
        <label>Email Reply Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Replies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>