force-app/main/default/objects/Email_Reply__c/fields/Email_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Name__c</fullName>
    <label>Email Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>