force-app/main/default/objects/Email_Reply__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Email Replies</relationshipLabel>
    <relationshipName>Email_Replies</relationshipName>
    <type>Lookup</type>
</CustomField>