force-app/main/default/objects/Email_Reply__c/fields/RMM_BatchID__c.field-meta.xml
<CustomField>
    <fullName>RMM_BatchID__c</fullName>
    <label>_RMM_BatchID</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>