force-app/main/default/objects/Email_Reply__c/fields/RMM_JobID__c.field-meta.xml
<CustomField>
    <fullName>RMM_JobID__c</fullName>
    <label>_RMM_JobID</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>