force-app/main/default/objects/Email_Reply__c/fields/RMM_ListID__c.field-meta.xml
<CustomField>
    <fullName>RMM_ListID__c</fullName>
    <label>_RMM_ListID</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>