force-app/main/default/objects/Email_Reply__c/fields/RMM_RecipientEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>RMM_RecipientEmailAddress__c</fullName>
    <label>_RMM_RecipientEmailAddress</label>
    <type>Email</type>
</CustomField>