force-app/main/default/objects/Email_Reply__c/fields/RMM_RecipientSubscriberKey__c.field-meta.xml
<CustomField>
    <fullName>RMM_RecipientSubscriberKey__c</fullName>
    <label>_RMM_RecipientSubscriberKey</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>