force-app/main/default/objects/Email_Reply__c/fields/RMM_ReplyBodyHTML__c.field-meta.xml
<CustomField>
    <fullName>RMM_ReplyBodyHTML__c</fullName>
    <label>_RMM_ReplyBodyHTML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>