force-app/main/default/objects/Email_Reply__c/fields/RMM_ReplySubject__c.field-meta.xml
<CustomField>
    <fullName>RMM_ReplySubject__c</fullName>
    <label>_RMM_ReplySubject</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>