force-app/main/default/objects/Email_Reply__c/fields/RMM_SubscriberID__c.field-meta.xml
<CustomField>
    <fullName>RMM_SubscriberID__c</fullName>
    <label>_RMM_SubscriberID</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>