force-app/main/default/objects/Email_Reply__c/listViews/Closed_Lost_replies.listView-meta.xml
<ListView>
    <fullName>Closed_Lost_replies</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RMM_RecipientEmailAddress__c</columns>
    <columns>RMM_ReplyBodyHTML__c</columns>
    <columns>RMM_ReplySubject__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Email_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Email_Name__c</field>
        <operation>equals</operation>
        <value>OE - CMP - Cross - Closed Lost -- NA - Sales - CL - Mar 24 - Email 1</value>
    </filters>
    <label>Closed/Lost replies</label>
</ListView>