force-app/main/default/objects/Email_Reply__c/listViews/Copy_of_of_Closed_lost_may_20242.listView-meta.xml
<ListView>
    <fullName>Copy_of_of_Closed_lost_may_20242</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RMM_RecipientEmailAddress__c</columns>
    <columns>RMM_ReplyBodyHTML__c</columns>
    <columns>RMM_ReplySubject__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Email_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Email_Name__c</field>
        <operation>contains</operation>
        <value>Cross - Closed lost</value>
    </filters>
    <filters>
        <field>Email_Name__c</field>
        <operation>contains</operation>
        <value>part 3</value>
    </filters>
    <label>Copy of of Closed/lost may 2024</label>
</ListView>