force-app/main/default/objects/Email_Reply__c/listViews/Email_replays_test.listView-meta.xml
<ListView>
    <fullName>Email_replays_test</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RMM_RecipientEmailAddress__c</columns>
    <columns>RMM_ReplyBodyHTML__c</columns>
    <columns>RMM_ReplySubject__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Email_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Email_Name__c</field>
        <operation>contains</operation>
        <value>Marketing Generalist</value>
    </filters>
    <label>Email replays test</label>
</ListView>